# CricketIQ

./: .gitignore
.github/phase-2-mongodb/: ARCHITECTURE-MONGODB-INTEGRATION.md  MONGODB-INTEGRATION-GUIDE.md  ai_service_mongodb.py  mongo_query_engine.py
backend/: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt
backend/chat/: serializers.py  test_ai_service.py  test_query_engine.py  test_views.py  tests.py  urls.py  views.py
backend/chat/services/: ai_service.py  function_calling_service.py  mongo_query_engine.py  query_engine.py  schema_service.py
backend/config/: settings.py  urls.py  views.py  wsgi.py
backend/cricket/: filters.py  metrics.py
backend/data/: README.md  matchwise_data.csv
backend/tests/: test_function_calling_script.py  test_specific.py
frontend/: App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
frontend/components/charts/: BarChart.tsx  ChartRenderer.tsx  LineChart.tsx
frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
frontend/components/layout/: Container.tsx  Header.tsx
frontend/components/ui/: Button.tsx  ThemeToggle.tsx
frontend/context/: ThemeContext.tsx
frontend/hooks/: useChat.ts  useTheme.ts
frontend/services/: api.ts
frontend/src/: App.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend_old/: FRONTEND_PROMPT.md  package-lock.json  package.json
(+9 files in other folders)
